# llm-agents

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/crewai/: crewai_agent.py  crewai_crew.py  crewai_model_creator.py
app/crewai/config/: agents.yaml  tasks.yaml
app/langchain/: langchain_agent.py  langchain_model_creator.py
app/llamaindex/: llamaindex_agent.py  llamaindex_model_creator.py
app/n8n/workflow/: Ticket Resolution.json
app/openai/: openai_agent.py  openai_model_creator.py
app/pydanticai/: pydanticai_agent.py  pydanticai_model_creator.py
playground/: evaluate_classification.py  models.py  run_crewai.py  run_langchain.py  run_llamaindex.py  run_n8n.py  run_openai.py  run_pydanticai.py  tickets.py
playground/data/: evaluate_classification.py  expected_classifications.py  models.py  tickets.py
prompts/: format_instructions_prompt.py  system_prompt.py  ticket_prompt.py  user_prompt.py
utils/: logger.py  model.py  ticket.py
